<resources>
    <string name="app_name">DevExLearning</string>
    <string name="elevate_your_n_learning_experience">Elevate Your\nLearning Experience</string>
    <string name="what_would_you_like_to_nlearn_today">What would you like to\nlearn today?</string>
    <string name="developing">Developing</string>
    <string name="designing">Designing</string>
    <string name="ai_and_ml">AI and ML</string>
    <string name="explore">Explore</string>
    <string name="popular_courses">Popular Courses</string>
    <string name="see_all">See All</string>
    <string name="advanced_certification_nprogram_in_ai">Advanced certification\nProgram in AI</string>
    <string name="_169">$169</string>
    <string name="title">Title</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="google">Google</string>
    <string name="hi_user">Hi, User!</string>
    <string name="google_login_button">Google Login Button</string>
    <string name="client_id">465804489735-f57ons0kc7htduo44f26oqj39ncsruji.apps.googleusercontent.com</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="back_to_home">Back to home</string>
    <string name="user_name">User Name</string>
    <string name="profile_user_photo">Profile User Photo</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings_scroll_view">Settings Scroll View</string>
    <string name="night_mode">Night Mode</string>
    <string name="notifications">Notifications</string>
    <string name="private_account">Private Account</string>
    <string name="security_amp_privacy"><![CDATA[Security & Privacy]]></string>
    <string name="return_home_page">Return Home Page</string>
    <string name="text_size">Text Size</string>
    <string name="languages">Languages</string>
    <string name="send_message_to_us">Send Message To Us</string>
    <string name="about_us">About Us</string>
    <string name="faqs">FAQs</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_image">User Image</string>
    <string name="google_sign_in_button">Google Sign In Button</string>
</resources>