<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender"
    tools:context=".activity.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/lavender"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/backBtn"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:background="@drawable/back_btn">

                <ImageView
                    android:id="@+id/backImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/back_to_home"
                    app:tint="@color/white" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/profileTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/userImg"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/user_1"
                    android:contentDescription="@string/profile_user_photo" />

                <TextView
                    android:id="@+id/usernameTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/user_name"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/emailTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_background"
                    android:text="@string/edit_profile"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>