<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/page_bkg"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:id="@+id/loginCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="24dp"
                android:background="@drawable/lavender_border">

                <TextView
                    android:id="@+id/loginTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="36sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/lavender"/>

                <EditText
                    android:id="@+id/loginUsername"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/lavender_border"
                    android:layout_marginTop="40dp"
                    android:padding="8dp"
                    android:hint="@string/username"
                    android:drawableStart="@drawable/ic_baseline_person_pin_24"
                    android:drawablePadding="8dp"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/lavender_border"
                    android:layout_marginTop="40dp"
                    android:padding="8dp"
                    android:hint="@string/password"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:importantForAutofill="no" />

                <TextView
                    android:id="@+id/forgotPasswordRedirectTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_your_password"
                    android:textSize="18sp"
                    android:textColor="@color/lavender"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:layout_marginTop="10dp"/>

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/login"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/registerRedirectTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textSize="18sp"
                    android:textColor="@color/lavender"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:layout_marginTop="30dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>

</LinearLayout>